Fix .reference--logo bug on Chrome and Safari
Element was invisible

--- a/dev/stylesheets/layout.styl
+++ b/dev/stylesheets/layout.styl
@@ -408,6 +408,7 @@ section
 
   .reference--logo
     display   inline
+    width     100%
     max-width 40%
     margin    10% 0 10%
     float     right
